--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^3.11.0",
+    "react-leaflet": "^3.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3",
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.5.19",
     "@types/react-router-dom": "^5.1.6"
   }
 }
